# FastAPI

./: 05_빅데이터플랫폼아키텍처설계_홍은경.pptx  ch09_happy.ipynb  main.py  models.py  pyproject.toml  report.html
01_subway_pipeline/: 01_subway.ipynb
02_parking_lot/: parking_lot.ipynb
03_TAGo_API_pipeline/: bus_api.ipynb
04_TAGo_API_pipeline_ex/: bus_api.ipynb
05_horse_api_pipeline/: 07_빅데이터수집시스템개발_홍은경.pptx
09_processing_system/: 09_빅데이터처리시스템개발_홍은경.pptx  README.md  batch_processor.py  config.py  database.py  event_processor.py  pipeline.py  verify_processing.py
2026_07_10_test/: 08_빅데이터저장시스템개발_홍은경.pptx  README.md  database.py  loader.py  models.py  pipeline.py  verify.py
Blog/: 06_main.py  request.py  response.py
NCS_bigdata_processing_system/: 01_원본데이터탐색.py  02_역별집계.py  03_시간대별승차집계.py  05_선택도전_날짜별집계.py  README.md  batch_processor.py  batch_processor_review1.py  batch_processor_review2.py  batch_processor_review3.py  config.py  database.py  event_processor.py  verify_processing.py
auth/: password.py
blog - 260615 - by석쌤/: main.py
ch10_no_show/: no_show.ipynb
database/: db_connection.py  orm.py
fastapi_review/: README.md  crud.py  database.py  dependencies.py  main.py  models.py  report.html  schemas.py  test_main.py
football/: crud.py  database.py  main.py  models.py  schemas.py  seed_postgres_basic.py  show_test_results.py  test_crud.py  test_main.py
main.py 실습폴더/: 01_main.py  02_main.py  03_pydantic.py  04_main.py  05_ memo_main.py  06_lunch_menu_main.py  08_models.py
routers/: ch09_happy.ipynb  todo.py  user.py
schema/: 05_main.py  request.py  (+1 more)
(+51 files in other folders)
