[project]
name = "fastapi_2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]==0.128.0",
    "ipykernel>=7.3.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pwdlib[argon2]>=0.3.0",
    "pytest>=9.1.1",
    "pytest-html>=4.2.0",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
]
